# imuops

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  public_alpha_feedback.md
.github/workflows/: ci.yml  pr_tabular_review.yml
datasets/: manifest.toml
docs/: architecture.md  datasets.md  release.md  schema_compatibility.md  trustscore.md  trustscore_validation.md
docs/artifacts/: trustscore_validation_release_summary.json
docs/artifacts/release_validation/: TEST1_trustscore_validation.json  sample_tabular_session_trustscore_validation.json  user_1_trustscore_validation.json
examples/: run_corruption_demo.sh  run_legacy_demo.sh  run_tabular_demo.sh  run_wisdm_demo.sh  sample_tabular_config.yaml  sample_tabular_imu.csv  tabular_config.example.yaml
notebooks/: imuops_sdk_demo.ipynb
scripts/: fetch_oxiod_sample.py  fetch_ronin_sample.py  fetch_wisdm_sample.py  generate_release_visuals.py  run_github_action.py
src/imuops/: __init__.py  __main__.py  audit.py  batch.py  benchmark.py  cli.py  columns.py  compare.py  corruption.py  exporting.py  models.py  session.py  utils.py  validation.py
src/imuops/adapters/: __init__.py  base.py  legacy_arduino.py  oxiod.py  ronin.py  tabular.py  wisdm.py
src/imuops/config/: __init__.py  defaults.toml
src/imuops/contrib/: __init__.py  legacy_arduino.py
src/imuops/replay/: __init__.py
src/imuops/reporting/: __init__.py  theme.py
tests/: conftest.py  test_audit.py  test_benchmark.py  test_cli_e2e.py  test_corruption.py  test_legacy_adapter.py  test_ops_workflows.py  test_public_adapters.py  test_public_alpha.py  test_replay.py  test_report.py  test_v040_contracts.py
(+1 files in other folders)
