[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "imuops"
version = "0.4.0"
description = "IMU data QA, reliability scoring, and reproducibility tooling"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["imu", "wearable", "sensor-fusion", "benchmark", "data-quality", "qa", "har", "pdr"]
authors = [
  {name = "Boz Liu"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "ahrs>=0.3.1",
  "h5py>=3.11.0",
  "jinja2>=3.1.4",
  "numpy>=1.26.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "plotly>=5.24.1",
  "pydantic>=2.8.2",
  "pyarrow>=15.0.0",
  "pyyaml>=6.0.2",
  "requests>=2.32.0",
  "scikit-learn>=1.5.2",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest-cov>=5.0.0",
  "pytest>=8.2.0",
]

[project.scripts]
imuops = "imuops.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/imuops"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/imuops",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/docs",
  "/examples",
  "/scripts",
  "/datasets",
  "/notebooks",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:.*'T' is deprecated.*:FutureWarning",
]

[tool.coverage.run]
source = ["src/imuops"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
